<b>Version 2.0.7:</b><br/><br/>
    &#8226; Faster and more stable method for accessing and saving tweets<br/>
    &#8226; In-app browser background adjusts according to theme<br/>
    &#8226; Fixes for the dashclock settings<br/>
</br><br/>

<b>Version 2.0.5:</b><br/><br/>
    &#8226; Search friends by screenname from the Action Bar<br/>
    &#8226; Fixed some problems with the drawer<br/>
    &#8226; Fixed some links not appearing properly<br/>
    &#8226; More crash fixes<br/>
    &#8226; More RTL fixes<br/>
    &#8226; Some duplication fixes<br/>
</br><br/>

<b>Version 2.0.2:</b><br/><br/>
    &#8226; Safer database reads and writes for better stability<br/>
    &#8226; More optimization for timelines for better speed<br/>
    &#8226; Fixed profile pictures not always showing on searches<br/>
    &#8226; Fixed some RTL errors<br/>
    &#8226; Some fixes for saved searches not displaying content<br/>
    &#8226; A few more tweeks for Tweetmarker<br/>
    &#8226; Fixed Pwiccer<br/>
    &#8226; Fixed emojis not appearing correctly<br/>
    &#8226; Fixed a small bug for uploading images<br/>
</br><br/>

<b>Version 2.0.1:</b><br/><br/>
    &#8226; Slight style changes on the bar widget<br/>
    &#8226; Some reported bugs from 2.0.0 fixed<br/>
</br><br/>

<b>Version 2.0.0:</b><br/><br/>
<b>NEW:</b><br/>
    &#8226; Talon Pull will automatically shut down to preserve battery when no data connection is active, then restart and check your timeline for missed tweets when data becomes available again.<br/>
    &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
    &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
    &#8226; Pictures page on a users profile<br/>
    &#8226; Custom Light Flow support (In future Light Flow update)<br/>
    &#8226; Favorite users timeline is now an option for the extra pages<br/>
    &#8226; Animations for opening new pages and windows<br/>