@@ -22,8 +22,6 @@
 
 -- For Release --
 
-    - show position option for dashclock instead of "new tweets"
-
     Version 2.1.0
         - Drafts
         - Scheduled Tweets
